--- a/RefGameShapesGazeFeedbackExperiment/public__stylesheets__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.css
+++ b/RefGameShapesGazeFeedbackExperiment/public__stylesheets__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.css
@@ -1,5 +1,9 @@
  /*Fill in your CSS code here */
 
+body {
+  min-width:600px!important;
+}
+
 #myProgress {
   width: 20%;
   background-color: #ffffff;
@@ -19,3 +23,72 @@
 #smallTable, #smallTh, #smallTd {
   border: 2px solid black;
 }/* Fill in your CSS code here */
+
+#overlay {
+  /* Video Feed Styling:
+   * Include the !important keyword to override default styles applied by JS.
+   * webgazer.js sets defaults for: display, position, top, left, width, height
+   */
+}
+#webgazerVideoContainer {
+    display: block !important; 
+    position: fixed !important;
+    top: 0px !important;
+    left: 0px !important;
+    width: 320px !important;
+    height: 240px !important;
+    z-index: 1;
+}
+
+/* Calibration button styling */
+.Calibration{
+  width: 20px;
+  height: 20px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
+  background-color: red;
+  opacity: 0.2;
+  border-color: black;
+  border-style: solid;
+  position:fixed;
+}
+
+/* Calibration point position */
+#Pt1{
+  top: 70px;
+  left:170px;
+}
+#Pt2{
+  top: 70px;
+  left:50vw;
+  margin-left: 340;
+}
+#Pt3{
+  top: 70px;
+  right:2vw;
+}
+#Pt4{
+  top:50vh;
+  left:2vw;
+}
+#Pt5{
+  top: 50vh;
+  left: 50vw;
+}
+#Pt6{
+  top: 50vh;
+  right:2vw;
+}
+#Pt7{
+  bottom:2vw;
+  left: 2vw;
+}
+#Pt8{
+  bottom:2vw;
+  left:50vw;
+}
+#Pt9{
+  bottom:2vw;
+  right:2vw;
+}
