--- a/RefGameShapesGazeFeedbackExperiment/public__stylesheets__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.css
+++ b/RefGameShapesGazeFeedbackExperiment/public__stylesheets__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.css
@@ -72,7 +72,7 @@ body {
   top:50vh;
   left:2vw;
 }
-#Pt5{
+#PtAccMiddle{
   top: 50vh;
   left: 50vw;
 }
@@ -91,4 +91,13 @@ body {
 #Pt9{
   bottom:2vw;
   right:2vw;
+}
+
+#PtAccLeft{
+  top:50vh;
+  left:20vw;
+}
+#PtAccRight{
+  top:50vh;
+  right:20vw;
 }
