add: script to generate inputdata.csv

--- a/RefGameShapesGazeFeedbackExperiment/public__stylesheets__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.css
+++ b/RefGameShapesGazeFeedbackExperiment/public__stylesheets__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.css
@@ -97,7 +97,14 @@ body {
   top:50vh;
   left:20vw;
 }
+
 #PtAccRight{
   top:50vh;
   right:20vw;
+}
+
+#Instr {
+  display: flex;
+  margin-top: 75vh;
+  justify-content: center;
 }
