add: quick between trial calibration fix: user can no longer skip calibration by clicking outside of the alert

--- a/RefGameShapesGazeFeedbackExperiment/public__stylesheets__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.css
+++ b/RefGameShapesGazeFeedbackExperiment/public__stylesheets__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.css
@@ -102,3 +102,13 @@ body {
   top:50vh;
   right:20vw;
 }
+
+#PtAccTop{
+  top:10vh;
+  left:50vw;
+}
+
+#PtAccBottom{
+  bottom:10vh;
+  left:50vw;
+}
